fixed clip title too long bug, fixed view truncation

--- a/knowclip-fe/src/components/reusable/VideoTitle/video-title.css
+++ b/knowclip-fe/src/components/reusable/VideoTitle/video-title.css
@@ -15,6 +15,9 @@
 
 .videoInfo {
   flex: 2;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .videoTitle {
@@ -34,6 +37,6 @@
 }
 
 .views {
-  font-size: 15px;
+  font-size: 13px;
   text-align: right;
 }
